[package]
authors = ["Joe Batt <Joe@SolidDesign.net>"]
edition = "2018"
name = "j1939scanner"
version = "0.1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
calamine = "0.18.0"
anyhow = "1.0.42"
libloading = "0.7.0"
rust-ini="0.17.0"
fltk = { version = "1.1.11", features = ["fltk-bundled"] }