[package]
authors = ["Joe Batt <Joe@SolidDesign.net>"]
edition = "2018"
name = "j1939scanner"
version = "0.1.0"

[dependencies]
serde = { version = "^1", features = ["derive"] }
calamine = "^0.18"
anyhow = "^1"
libloading = "^0.7"
rust-ini="^0.18"
fltk = { version = "^1.3", features = ["fltk-bundled"] }
simple_table = {git="https://github.com/SolidDesignNet/simple_table", branch="main"}

